--- a/.octoprint/data/preemptive_cache_config.yaml
+++ b/.octoprint/data/preemptive_cache_config.yaml
@@ -1,6 +1,11 @@
 /:
 - _count: 2
-  _timestamp: 1599448671.353137
+  _timestamp: 1599453678.257759
+  base_url: http://3b.local/
+  path: /
+  query_string: l10n=en
+- _count: 4
+  _timestamp: 1599453183.43835
   base_url: http://octopi.local/
   path: /
   query_string: l10n=en
